--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -74,7 +74,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
   \item \textbf{Random Town:} On next Resource Round, you may recruit one random Neutral \silver\ Unit by paying its full \svg{pay_v2} cost.
   \item \textbf{Grail Field:} Gain the Grail Token.
-  \item If you start a turn with the Grail Token, gain +1 \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item If you start a turn with the Grail Token, gain \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
   \item Level VII Neutral Combats cannot be skipped and grant the player \svg{morale_positive}.
