--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -79,7 +79,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
   \item Level VII Neutral Combats cannot be skipped and grant the player \svg{morale_positive}.
   \item Players do not have to pay \svg{gold} after losing a Combat against another player.
-  \item A defeated Main Hero may Empower one Statistic Card from their M\&M Deck \textit{and} gain \svg{morale_positive}.
+  \item A defeated Main Hero may Empower one Statistic Card from their hand or Discard Pile \textit{and} gain \svg{morale_positive}.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
   \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
 \end{itemize}
