--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{https://discord.com/channels/1275490124301467799/1284428969369665631}{KABLAMIO's Discord}
 
-\textit{All eyes turn to the Hill — where legends rise and empires fall. Fight, claim it, and prove you’re worthy to rule.}
+\textit{All eyes turn to the Hill — where legends rise and empires fall. Fight for it, claim it, and prove you’re worthy to rule.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 6 Rounds.
@@ -84,7 +84,7 @@ Players get VPs for:
     \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
-  \item In a 2-Player game when a player gains \textbf{x} VP for controlling the Hill, that player also has to distribute \textbf{x} \svg{damage-red} to their Units. The \svg{damage-red} is retained until the next Combat starts.
+  \item In a 2-Player game when a player gains \textbf{x} VP for controlling the Hill, that player also has to distribute \textbf{x} \svg{damage-red} to their Units. The \svg{damage-red} is retained until that Unit's next Combat.
 \end{itemize}
 
 \end{multicols}
