Restructure timed events

--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Clash/Alliance Scenario}{Astral Run}{\images/astral.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 \textbf{Author:} LAAMAKALA
 
@@ -56,24 +56,39 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 \begin{itemize}
   \item 5 VP for the first player to flag the Center VII Field.
   \item 1 VP for every flagged Mine and Settlement on Near and Center Tiles.
-  \item Removed Artifacts also count towards VPs.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{1} Round:}
 \begin{itemize}
-  \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
-  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{\nth{6}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
-  \item[\textbf{\nth{9}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{\nth{10}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
-  \item[\textbf{\nth{12}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{\nth{13}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
+  \item All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
-
-\end{multicols*}
-
-\begin{multicols}{2}
+\textbf{\nth{4} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes.
+\end{itemize}
+\textbf{\nth{6} Round:}
+\begin{itemize}
+  \item Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
+\end{itemize}
+\textbf{\nth{9} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes.
+\end{itemize}
+\textbf{\nth{10} Round:}
+\begin{itemize}
+  \item Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
+\end{itemize}
+\columnbreak
+\textbf{\nth{12} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes.
+\end{itemize}
+\textbf{\nth{13} Round:}
+\begin{itemize}
+  \item All Heroes gain +1 \svgeven{movement}.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
@@ -90,5 +105,5 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 \end{multicols}
 
 \begin{tikzpicture}[overlay, remember picture]
-  \node[yshift=-8em] at (current page.center) {\includegraphics[width=0.9\linewidth]{\maps/astral_run.png}};
+  \node[yshift=-12em] at (current page.center) {\includegraphics[width=0.85\linewidth]{\maps/astral_run.png}};
 \end{tikzpicture}
