--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -63,17 +63,29 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
  \item 5 VP for conquering a Dragon Utopia
  \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction}
  \item 1 VP for every flagged Mine and Settlement on Near and Center Tiles
- \item All removed Artifacts count towards VPs
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{1} Round:}
 \begin{itemize}
-  \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
-  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes (except VII Settlement, Grail and Dragon Utopia).
-  \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
-  \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
+  \item All Heroes gain +1 \svgeven{movement}.
+\end{itemize}
+\textbf{\nth{4} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes (except VII Settlement, Grail and Dragon Utopia).
+\end{itemize}
+\textbf{\nth{8} Round:}
+\begin{itemize}
+  \item Repeat event of Round 4.
+\end{itemize}
+\textbf{\nth{9} Round:}
+\begin{itemize}
+  \item Repeat event of Round 1.
+\end{itemize}
+\textbf{End of \nth{10} Round:}
+\begin{itemize}
+  \item Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
