--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -50,11 +50,21 @@ After Round 8, the player with the most Victory Points (VP) wins (see Tournament
 
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{1} Round:}
 \begin{itemize}
-  \item \textbf{\nth{1} Round:} All Heroes gain +1 \svgeven{movement}.
-  \item \textbf{\nth{2} Round:} Players may gain either 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
-  \item \textbf{\nth{5} Round:} Remove all Black Cubes.
-  \item \textbf{\nth{7} Round:} All Heroes gain +1 \svgeven{movement}.
+  \item All Heroes gain +1 \svgeven{movement}.
+\end{itemize}
+\textbf{\nth{2} Round:}
+\begin{itemize}
+  \item Players may gain either 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
+\end{itemize}
+\textbf{\nth{5} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes.
+\end{itemize}
+\textbf{\nth{7} Round:}
+\begin{itemize}
+  \item All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -70,6 +80,7 @@ After Round 8, the player with the most Victory Points (VP) wins (see Tournament
   \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
 \end{itemize}
 
+\vspace*{\fill}
 \hommtablemulticol[]{33}{
   \centering
   \medskip
