--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -51,11 +51,21 @@ Players get VPs for:
 
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{2} Round:}
 \begin{itemize}
-  \item \textbf{\nth{2} Round:} Gain Secondary Hero for free.
-  \item \textbf{\nth{3} Round:} Gain Citadel for free. If you already had it, gain 1 VP.
-  \item \textbf{\nth{4} Round:} Gain \silver\ dwelling for free. If you already had it, gain 2 VP.
-  \item \textbf{\nth{5} Round:} Gain \golden\ dwelling for free. If you already had it, gain 3 VP.
+  \item Gain Secondary Hero for free.
+\end{itemize}
+\textbf{\nth{3} Round:}
+\begin{itemize}
+  \item Gain Citadel for free. If you already had it, gain 1 VP.
+\end{itemize}
+\textbf{\nth{4} Round:}
+\begin{itemize}
+  \item Gain \silver\ dwelling for free. If you already had it, gain 2 VP.
+\end{itemize}
+\textbf{\nth{5} Round:}
+\begin{itemize}
+  \item Gain \golden\ dwelling for free. If you already had it, gain 3 VP.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -74,6 +84,7 @@ Players get VPs for:
   \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10 \svg{gold} and resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
 \end{itemize}
 
+\columnbreak
 \subsection*{\MakeUppercase{Optional Rules}}
 \begin{itemize}
   \item After winning a Neutral Combat, you may Recruit one of the defeated Neutral Units for half the recruitment \svg{gold} rounded up (you may use only one Neutral Unit Recruited this way in a Combat).  % no-check-caps
@@ -102,29 +113,29 @@ Players get VPs for:
     \end{scope}
   }
 
-  \node at (13.5, -5) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill_v2-3p.png}};
+  \node at (13.5, -4) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill_v2-3p.png}};
 
-  \blocked{13.71}{-3.62}{90}
-  \blocked{11.28}{-6.39}{90}
-  \blocked{14.91}{-7.09}{90}
+  \blocked{13.71}{-2.62}{90}
+  \blocked{11.28}{-5.39}{90}
+  \blocked{14.91}{-6.09}{90}
 
-  \node at (17.5, -1.5) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
+  \node at (17.5, -0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
 
-  \node at (13.33, -5.53) {{{\footnotesize{The}}}};
-  \node at (13.33, -5.82) {{{\footnotesize{Hill}}}};
+  \node at (13.33, -4.53) {{{\footnotesize{The}}}};
+  \node at (13.33, -4.82) {{{\footnotesize{Hill}}}};
 
-  \node at (13.4, -10.5) {\textbf{3-PLAYER SCENARIO}};
+  \node at (13.4, -9.5) {\textbf{3-PLAYER SCENARIO}};
 
-  \node at (4.6, -3.8) {\includegraphics[width=0.54\linewidth]{\maps/king_of_the_hill_v2-2p.png}};
+  \node at (4.6, -1.8) {\includegraphics[width=0.54\linewidth]{\maps/king_of_the_hill_v2-2p.png}};
 
-  \blocked{6.63}{-2.76}{90}
-  \blocked{2.57}{-4.15}{90}
+  \blocked{6.63}{-0.76}{90}
+  \blocked{2.57}{-2.15}{90}
 
-  \node at (6.8, -6.4) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
+  \node at (6.8, -4.4) {\large{{\textbf{\textcolor{darkcandyapplered}{C1/C3}}}}};
 
-  \node at (4.61, -3.29) {{{\footnotesize{The}}}};
-  \node at (4.61, -3.58) {{{\footnotesize{Hill}}}};
+  \node at (4.61, -1.29) {{{\footnotesize{The}}}};
+  \node at (4.61, -1.58) {{{\footnotesize{Hill}}}};
 
-  \node at (4.6, -9.0) {\textbf{2-PLAYER SCENARIO}};
+  \node at (4.6, -7.0) {\textbf{2-PLAYER SCENARIO}};
 \end{tikzpicture}
 
