--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -55,16 +55,41 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 
 \subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{\nth{1} Round:}
 \begin{itemize}
-  \item[\textbf{\nth{1}}] \textbf{Round:} Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
-  \item[\textbf{\nth{2}}] \textbf{Round:} Each player may gain one reward from the Field that the closest player to them visits this Round.
-  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{\nth{6}}] \textbf{Round:} Secondary Heroes gain +1 \svgeven{movement}.
-  \item[\textbf{\nth{8}}] \textbf{Round:} Each player may remove up to 5 Black Cubes from the map.
-  \item[\textbf{\nth{9}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience} roll 2 \svg{resource}.
-  \item[\textbf{\nth{10}}] \textbf{Round:} All players may recruit a Secondary Hero for free.
-  \item[\textbf{\nth{11}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{\nth{12}}] \textbf{Round:} Each player may recruit one \silver\ Neutral Unit from the closest player's Faction for half its recruitment cost.
+  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+\end{itemize}
+\textbf{\nth{2} Round:}
+\begin{itemize}
+  \item Each player may gain one reward from the Field that the closest player to them visits this Round.
+\end{itemize}
+\textbf{\nth{4} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes.
+\end{itemize}
+\textbf{\nth{6} Round:}
+\begin{itemize}
+  \item Secondary Heroes gain +1 \svgeven{movement}.
+\end{itemize}
+\textbf{\nth{8} Round:}
+\begin{itemize}
+  \item Each player may remove up to 5 Black Cubes from the map.
+\end{itemize}
+\textbf{\nth{9} Round:}
+\begin{itemize}
+  \item Player(s) whose Main Hero has the least \svg{experience} roll 2 \svg{resource}.
+\end{itemize}
+\textbf{\nth{10} Round:}
+\begin{itemize}
+  \item All players may recruit a Secondary Hero for free.
+\end{itemize}
+\textbf{\nth{11} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes.
+\end{itemize}
+\textbf{\nth{12} Round:}
+\begin{itemize}
+  \item Each player may recruit one \silver\ Neutral Unit from the closest player's Faction for half its recruitment cost.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
