--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -95,7 +95,7 @@ Players get VPs for:
     \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
-  \item In a 2-Player game when a player gains \textbf{x} VP for controlling the Hill, that player also has to place 1 \svg{damage-red} to their most expensive Unit.
+  \item In a 2-Player game when a player gains VPs for controlling the Hill, that player also has to place 1 \svg{damage-red} to their most expensive Unit.
 \end{itemize}
 
 \end{multicols}
