Fix timed events for sentinels

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -78,9 +78,8 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
 \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item Repeat the Timed Events of Rounds \mbox{7 and 8.}
+  \item Spawn an enemy army following the rules outlined below.
 \end{itemize}
-\vspace{-0.5em}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
