--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-14 07:17+0100\n"
+"POT-Creation-Date: 2025-04-25 09:15+0200\n"
 "PO-Revision-Date: 2025-03-29 17:21+0000\n"
 "Last-Translator: Vojtěch Růžička <kelghor@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -22,11 +22,11 @@ msgstr ""
 #. type: Plain text
 #: coops/sentinels.tex:3
 msgid ""
-"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
-"png}"
+"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/"
+"sentinel.png}"
 msgstr ""
-"\\addscenariosection{1}{Kooperativní Scéná\\v{r}}{Strážci}{\\images/sentinel."
-"png}"
+"\\addscenariosection{1}{Kooperativní Scéná\\v{r}}{Strážci}{\\images/"
+"sentinel.png}"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -405,16 +405,14 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{10} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Repeat the Timed Events of Rounds \\mbox{7 and 8.}\n"
+"  \\item Spawn an enemy army following the rules outlined below.\n"
 "\\end{itemize}\n"
-"\\vspace{-0.5em}\n"
 "\n"
 msgstr ""
 "\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 7. a 8. Kola.\n"
+"  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
 "\\end{itemize}\n"
-"\\vspace{-0.5em}\n"
 "\n"
 
 #. type: multicols
@@ -665,12 +663,12 @@ msgstr ""
 #| "10}\\\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\bronze \\silver "
 #| "\\silver \\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver "
 #| "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
-#| "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, "
-#| "1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver "
-#| "\\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
-#| "\\silver \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\golden "
-#| "\\azure \\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\"
-#| "\\ \\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\silver \\silver \\golden "
+#| "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}"
+#| "\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver "
+#| "\\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver "
+#| "\\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
+#| "\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
+#| "\\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\silver \\silver \\golden "
 #| "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
 #| "\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
 #| "\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
