--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-14 07:17+0100\n"
+"POT-Creation-Date: 2025-04-25 09:15+0200\n"
 "PO-Revision-Date: 2024-10-30 08:58+0000\n"
 "Last-Translator: qwrtln <qwrtln@users.noreply.hosted.weblate.org>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -23,8 +23,8 @@ msgstr ""
 #. type: Plain text
 #: coops/sentinels.tex:3
 msgid ""
-"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
-"png}"
+"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/"
+"sentinel.png}"
 msgstr ""
 "\\addscenariosection{1}{Tryb Kooperacyjny}{Strażnicy}{\\images/sentinel.png}"
 
@@ -397,14 +397,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{10} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Repeat the Timed Events of Rounds \\mbox{7 and 8.}\n"
+"  \\item Spawn an enemy army following the rules outlined below.\n"
 "\\end{itemize}\n"
-"\\vspace{-0.5em}\n"
 "\n"
 msgstr ""
 "\\textbf{Runda 10.:}\n"
 "\\begin{itemize}\n"
-"  \\item Powtórz wydarzenia czasowe Rund 7. i 8.\n"
+"  \\item Umieść wrogą armię zgodnie z zasadami poniżej.\n"
 "\\end{itemize}\n"
 "\n"
 
