--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-25 09:16+0200\n"
+"POT-Creation-Date: 2025-04-25 07:18+0000\n"
 "PO-Revision-Date: 2024-10-25 16:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -20,8 +20,8 @@ msgstr ""
 #. type: Plain text
 #: coops/sentinels.tex:3
 msgid ""
-"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/"
-"sentinel.png}"
+"\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
+"png}"
 msgstr ""
 
 #. type: multicols*
