Add crusader image

--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{King of the Hill}{\images/kingofthehill.png}
+\addscenariosection{1}{Clash Scenario}{King of the Hill}{\images/crusader.png}
 
 \begin{multicols*}{2}
 
