--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -5,7 +5,7 @@
 
 \textit{As dice roll and fortunes shift, the lands of Antagarich spread before you in all their splendor.
   Your destiny follows these celestial rolls, each battle and treasure determined by chance.
-  Will you emerge victorious in this battle royale, claim the sacred grail, or stand alone as the king of the hill when the final die settles?
+  Will you emerge victorious in this battle royale, claim the sacred grail, or stand alone as the king of the hill when the final die settles?  % no-check-caps
 }
 
 Instead of playing a specific Scenario, you can follow these guidelines to create a random one.
@@ -21,7 +21,7 @@ Additionally, you get:
 \begin{itemize}
   \item 5 VPs for flagging a Dragon Utopia for the first time.
   \item 2 VPs for controlling the Dragon Utopia at the end of the game.
-  \item 5 VPs for bringing the Grail to your faction Town \textit{OR} 3 VPs for owning the Grail  at the end of the game.
+  \item 5 VPs for bringing the Grail to your Faction Town \textit{OR} 3 VPs for owning the Grail  at the end of the game.
 \end{itemize}
 
 \textbf{King of the Hill} -- Start a map with a Dragon Utopia in the middle.
@@ -60,7 +60,7 @@ Depending on your apetite, each player gets:
 \subsection*{\MakeUppercase{Map Setup}}
 
 Decide player order before placing the Tiles.
-In reverse player order, each player places one Tile in descending level (Near \rightarrow\ Far \rightarrow\ Starting).
+In reverse player order, each player places one Tile in descending level (Near \rightarrow\ Far \rightarrow\ Starting).  % no-check-caps
 
 \begin{tikzpicture}[overlay]
   \node[inner sep=0pt, opacity=0.2, xscale=-1, rotate=12] at (3, -4.4) {\includegraphics[width=0.85\linewidth, keepaspectratio]{\art/hourglass.png}};
