--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -37,20 +37,23 @@ Standard Grail rules apply: spend 2 \svgeven{movement} to dig it up, and bring i
 
 Depending on your apetite, each player gets:
 
-\textbf{Small Map:} 8 Rounds
+\textbf{Small (S) Map:} 8 Rounds, put one Near (IV-V) Map Tile in the middle
 \begin{itemize}
   \item 1 × Starting (I) Map Tile
   \item 2 × Far (II-III) Map Tile
 \end{itemize}
 
-\textbf{Medium Map:} 12 Rounds
+\textbf{Medium (M) Map:} 12 Rounds, put three Near (IV-V) Map Tiles in the middle
+\begin{tikzpicture}[overlay]
+  \node at (0.5, -1.1) {\includegraphics[width=0.3\linewidth]{\maps/medium.png}};
+\end{tikzpicture}
 \begin{itemize}
   \item 1 × Starting (I) Map Tile
   \item 2 × Far (II-III) Map Tile
   \item 1 × Near (IV-V) Map Tile
 \end{itemize}
 
-\textbf{Large Map:} 16 Rounds
+\textbf{Large (XL) Map:} 16 Rounds, put one Center (VI-VII) Map Tile in the middle
 \begin{itemize}
   \item 1 × Starting (I) Map Tile
   \item 2 × Far (II-III) Map Tile
@@ -63,7 +66,7 @@ Decide player order before placing the Tiles.
 In reverse player order, each player places one Tile in descending level (Near \rightarrow\ Far \rightarrow\ Starting).  % no-check-caps
 
 \begin{tikzpicture}[overlay]
-  \node[inner sep=0pt, opacity=0.2, xscale=-1, rotate=12] at (3, -4.4) {\includegraphics[width=0.85\linewidth, keepaspectratio]{\art/hourglass.png}};
+  \node[inner sep=0pt, opacity=0.2, xscale=-1, rotate=12] at (3, -3.7) {\includegraphics[width=0.8\linewidth, keepaspectratio]{\art/hourglass.png}};
 \end{tikzpicture}
 
 \end{multicols*}
