--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -45,8 +45,8 @@ After Round 6, the player with the most Victory Points (VP) wins.
 Players get VPs for:
 \begin{itemize}
   \item $R-1$ VPs for starting your turn on ``The Hill'', where $R$ is Round number.
-  \item 2 VP for winning a Combat against another Player
-  \item 1 VP for losing a Combat against another Player
+  \item 2 VP for winning a Combat against another player
+  \item 1 VP for losing a Combat against another player
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -76,7 +76,7 @@ Players get VPs for:
   \item Players do not lose gold for losing or retreating from any Combat.
   \item Secondary Heroes act as Main Heroes, with full Deck access and 3 \svgeven{movement}.
   \item After losing a Combat, the defeated Hero is moved to its starting Town.
-  \item After PvP Combat, both Players gain their lost \bronze\ and \silver\ Units back.
+  \item After PvP Combat, both players gain their lost \bronze\ and \silver\ Units back.
   \item Players may \svg{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
   \item ``The Hill'' Combat reward: 20 \svg{gold}.
@@ -95,7 +95,7 @@ Players get VPs for:
     \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
-  \item In a 2-Player game when a player gains VPs for controlling the Hill, that player also has to place 1 \svg{damage-red} to their most expensive Unit.
+  \item In a 2-player game when a player gains VPs for controlling the Hill, that player also has to place 1 \svg{damage-red} to their most expensive Unit.
 \end{itemize}
 
 \end{multicols}
