--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -1,11 +1,11 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{King of the Hill}{\images/crusader.png}
+\addscenariosection{1}{Clash Scenario}{Trial by Combat}{\images/crusader.png}
 
 \begin{multicols*}{2}
 
 \textbf{Author:} LAAMAKALA
 
-\textit{In the battle for the Hill, there is no honor — only victory or death. The weak will fall, the strong will fight, and only one will rule.}
+\textit{There is no honor — only victory or death. The weak will fall, the strong will fight, and only one will rule.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 8 Rounds.
