--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -115,10 +115,10 @@ After Round 8, the player with the most Victory Points (VP) wins (see Tournament
 
 \begin{center}
   \vfill
-  \includegraphics[width=1.0\linewidth]{\maps/king_of_the_hill-2.4p.png}
+  \includegraphics[width=1.0\linewidth]{\maps/trial_by_combat-2.4p.png}
   \captionof{figure}{\textbf{2/4-PLAYER SCENARIO}}
   \vfill
-  \includegraphics[width=1.0\linewidth]{\maps/king_of_the_hill-3p.png}
+  \includegraphics[width=1.0\linewidth]{\maps/trial_by_combat-3p.png}
   \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
 \end{center}
 
