--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -235,7 +235,7 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
 
   \begin{tabularx}{0.99\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Stingy} & \darkcell{Fair} & \darkcell{Generous}\\
   \darkcell[1.4]{Army}
-    & \lightcellleft[1.4]{2 × Few cheaptes \bronze\ Units}
+    & \lightcellleft[1.4]{2 × Few cheapest \bronze\ Units}
     & \lightcellleft[1.4]{Pack of cheap \bronze\ Units \linebreak Few pricy \bronze\ Units}
     & \lightcellleft[1.4]{Pack of pricy \bronze\ Units \linebreak Few cheap \silver\ Units}\\
   \darkcell[1.4]{Starting Resources}
