--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -77,6 +77,7 @@ Depending on your appetite for play, choose a size:
 
 Decide player order before placing the Tiles.
 In reverse player order, each player places one Tile in descending level (Near \rightarrow\ Far \rightarrow\ Starting).  % no-check-caps
+Every new Tile needs to connect to at least one existing Tile.
 
 The following \textbf{example} shows building the map for a \textbf{3-player XL Battle Royale}, with player 1 playing as \textcolor{rampartbg}{\textbf{Rampart}}, player 2 as \textcolor{infernobg}{\textbf{Inferno}}, and player 3 as \textcolor{castlebg}{\textbf{Castle}}.
 First, put the Center (VI-VII) Map Tile in the middle, and then proceed to distribute Near (IV-V) Map Tiles in the following order:
