Add timed events and additional rules

--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -263,3 +263,20 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
     & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall \linebreak Citadel}\\
   \end{tabularx}
 }
+
+\begin{multicols}{2}
+
+\subsection*{\MakeUppercase{Timed Events}}
+
+\textbf{\nth{6}, \nth{9} and \nth{12} Rounds:}
+\begin{itemize}
+  \item Remove all Black Cubes from every Water Wheel and Windmill on the map.
+\end{itemize}
+
+\subsection*{\MakeUppercase{Additional Rules}}
+
+\begin{itemize}
+  \item When Visiting a an Obelisk, roll 2 \svg{treasure} and choose 1 to resolve.
+\end{itemize}
+
+\end{multicols}
