--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{King of the Hill v2}{\images/kingofthehill.png}
+\addscenariosection{1}{Clash Scenario}{King of the Hill}{\images/kingofthehill.png}
 
 \begin{multicols}{2}
 
@@ -113,7 +113,7 @@ Players get VPs for:
     \end{scope}
   }
 
-  \node at (13.5, -4) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill_v2-3p.png}};
+  \node at (13.5, -4) {\includegraphics[width=0.56\linewidth]{\maps/king_of_the_hill-3p.png}};
 
   \blocked{13.71}{-2.62}{90}
   \blocked{11.28}{-5.39}{90}
@@ -126,7 +126,7 @@ Players get VPs for:
 
   \node at (13.4, -9.5) {\textbf{3-PLAYER SCENARIO}};
 
-  \node at (4.6, -1.8) {\includegraphics[width=0.54\linewidth]{\maps/king_of_the_hill_v2-2p.png}};
+  \node at (4.6, -1.8) {\includegraphics[width=0.54\linewidth]{\maps/king_of_the_hill-2p.png}};
 
   \blocked{6.63}{-0.76}{90}
   \blocked{2.57}{-2.15}{90}
