New scenarios: KotH, Shattered Alliance, Astral Run (#211)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>
Co-authored-by: Andrzej Wiącek <andrzej.wiacek@qwrtln.nl>

--- a/draft-scenarios/clash/main.tex
+++ b/draft-scenarios/clash/main.tex
@@ -19,3 +19,19 @@
 \clearpage
 
 \input{clash/dragon_valley.tex}
+
+\clearpage
+
+\input{clash/shattered_alliance.tex}
+
+\clearpage
+
+\input{clash/astral_run.tex}
+
+\clearpage
+
+\input{clash/trial_by_combat.tex}
+
+\clearpage
+
+\input{clash/king_of_the_hill.tex}
