Make table even

--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -68,12 +68,13 @@ Choose one of the following sizes:
   \textbf{Central Map Tile(s)}\\
   \bigskip
   \hspace{-0.7em}
-  \begin{tabularx}{0.99\linewidth}{p{1.7em}XXX} & \darkcell[1.4]{Battle Royale} & \darkcell[1.4]{King of the Hill} & \darkcell[1.4]{Capture the Grail} \\    \darkcell[1.4]{S}
+  \begin{tabularx}{0.99\linewidth}{p{1.7em}>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X} & \darkcell[1.4]{Battle Royale} & \darkcell[1.4]{King of the Hill} & \darkcell[1.4]{Capture the Grail} \\
+    \darkcell[1.4]{S}
     & \lightcell[1.4]{1~× Near (IV-V)}
-    & \multirow{3}{*}[5.5ex]{\lightcell[5.3]{1~× Center (VI-VII) with a Dragon Utopia (C1 or C3)}}
-    & \multirow{3}{*}[5.5ex]{\lightcell[5.3]{1~× Center (VI-VII) with a\linebreak Grail\linebreak (C2 or C4)}} \\
-    \darkcell[2.0]{M}
-    & \lightcell[2.0]{\includegraphics[width=0.9\linewidth]{\maps/medium.png}}
+    & \multirow{3}{*}[5.5ex]{\parbox{\linewidth}{\centering\lightcell[5.35]{1~× Center (VI-VII) with a Dragon Utopia (C1 or C3)}}}
+    & \multirow{3}{*}[5.5ex]{\parbox{\linewidth}{\centering\lightcell[5.35]{1~× Center (VI-VII) with a\linebreak Grail\linebreak (C2 or C4)}}} \\
+    \darkcell[2.2]{M}
+    & \lightcell[2.2]{\includegraphics[width=0.95\linewidth]{\maps/medium.png}}
     &
     & \\
     \darkcell[1.4]{XL}
