Expand timed events and additional rules

--- a/draft-scenarios/sections/random_scenario.tex
+++ b/draft-scenarios/sections/random_scenario.tex
@@ -285,15 +285,33 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{\nth{6}, \nth{9} and \nth{12} Rounds:}
+\textbf{\nth{1} Round:}
+\begin{itemize}
+  \item All Heroes gain +1 \svgeven{movement}.
+\end{itemize}
+\textbf{\nth{6} and \nth{9} Rounds:}
 \begin{itemize}
   \item Remove all Black Cubes from every Water Wheel and Windmill on the map.
 \end{itemize}
+\textbf{\nth{10} Round:}
+\begin{itemize}
+  \item Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
+\end{itemize}
+\textbf{\nth{12} Round:}
+\begin{itemize}
+  \item Repeat event of Round 6.
+\end{itemize}
+
+\columnbreak
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
   \item When Visiting a an Obelisk, roll 2 \svg{treasure} and choose 1 to resolve.
+  \item Players can spend their Build Token at any time to perform Trading Post actions.
+  \item Level VII Combat cannot be skipped by Diplomacy or any other means.
 \end{itemize}
+
+\vspace*{\fill}
 
 \end{multicols}
